Comment button wrong position fixed.

--- a/style.css
+++ b/style.css
@@ -955,7 +955,6 @@ object {
 }
 .comment-form .form-submit {
   position: relative;
-  top: -7rem;
 }
 
 /* =Widgets
